==================== 2.24.0.1 ====================

2008-08-10  Callum McKenzie  <callum@spooky-possum.org>

	* multiload.schemas.in: Fix a typo (Og Maciel, Bug 546800).

2008-05-10  Callum McKenzie  <callum@spooky-possum.org>

	* multiload.schemas.in: 
	* main.c (start_procman): Make the program launched when the
	monitor is clicked configurable via gconf. This helps us if we
	ever decide to change the default program and it keeps the power
	users happy. Patch from Arthur Taylor (see bug #532424).

2008-05-08  Jonh Wendell  <jwendell@gnome.org>

	* docs/Makefile.am, 
	* docs/pt_BR/: Brazilian Portuguese translation by Amadeu Barbosa.


2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* load-graph.c (load_graph_load_config): Fix a memory leak. Patch
	from Vincent Untz (Bug #528603).

2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-02-24  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Updated Korean translation.
	* docs/ko/figures/*.png: Updated screenshot.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am: Added ko to DOC_LINGUAS.
	* ko/ko.po: Korean translation gnome-doc-utils migration.
	* ko/*.xml: Removed.
	* ko/figures/*.png: Removed.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_MultiloadApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* global.h:
	* load-graph.c: (load_graph_destroy), (load_graph_new):
	* main.c: (about_cb), (multiload_applet_tooltip_update),
	(multiload_applet_new):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-06-19  Jordi Mas <jmas@softcatala.org>

	* docs/ca/ca.po: Catalan localization by Gil Forcada
	* docs/Makefile.am: ca added to DOC_LINGUAS

2007-03-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
