@@ -169,43 +169,34 @@
 </schema>
 
 <schema>
-	<key>/schemas/apps/multiload/prefs/netload_color0</key>
+	<key>/schemas/apps/multiload/prefs/netload2_color0</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
-	<default>#00b0b3</default>
+	<default>#fce94f</default>
 	<locale name="C">
-		<short>Graph color for SLIP network activity</short>
+		<short>Graph color for input network activity</short>
 	</locale>
 </schema>
 <schema>
-	<key>/schemas/apps/multiload/prefs/netload_color1</key>
+	<key>/schemas/apps/multiload/prefs/netload2_color1</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
-	<default>#00e2e6</default>
+	<default>#edd400</default>
 	<locale name="C">
-		<short>Graph color for PLIP network activity</short>
+		<short>Graph color for output network activity</short>
 	</locale>
 </schema>
 <schema>
-	<key>/schemas/apps/multiload/prefs/netload_color2</key>
+	<key>/schemas/apps/multiload/prefs/netload2_color2</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
-	<default>#00fbff</default>
+	<default>#c4a000</default>
 	<locale name="C">
-		<short>Graph color for Ethernet network activity</short>
+		<short>Graph color for loopback network usage</short>
 	</locale>
 </schema>
 <schema>
-	<key>/schemas/apps/multiload/prefs/netload_color3</key>
-	<owner>multiload-applet-2</owner>
-	<type>string</type>
-	<default>#B7FEFF</default>
-	<locale name="C">
-		<short>Graph color for other network usage</short>
-	</locale>
-</schema>
-<schema>
-	<key>/schemas/apps/multiload/prefs/netload_color4</key>
+	<key>/schemas/apps/multiload/prefs/netload2_color3</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
 	<default>#000000</default>
