@@ -1,3 +1,15 @@
+2008-11-04  Callum McKenzie  <callum@spooky-possum.org>
+
+	* multiload.schemas.in:
+	* properties.c:
+	* linux-proc.c:
+	* linux-proc.h:
+	* main.c: Change the netload applet to report packets in and out
+	rather than the transport protocol (slip and plip are ancient,
+	leaving the almost useless distinction of ethernet and
+	other). Patch supplied by Eric Piel. See bug 327509. 
+	
+
 ==================== 2.24.0.1 ====================
 
 2008-08-10  Callum McKenzie  <callum@spooky-possum.org>
